--- a/index.html
+++ b/index.html
@@ -30,17 +30,40 @@
 
     });
   </script>
-  <style>
-    body {
-      background-image: url(https://user-images.githubusercontent.com/53205613/91665679-02151c80-eb15-11ea-9c48-5b0769610ea3.png);
-    }
-  </style>
+  <meta charset="utf-8">
+  <title>Welcome To ZomoChat</title>
+  <style type="text/CSS">
+     body{
+	      padding: 0;
+		  margin: 0;
+		  background: black;
+		  background-image: url("https://github.com/himankurgoyal/ZomentumProject/blob/master/assets/images/Zomo_background.PNG");
+		  background-repeat: no-repeat;
+		  background-position: center;
+		  
+		}
+		h3
+        {
+		   font-size: 4em;
+		   margin:0 auto;
+		   display: block;
+		   color: white;
+		   padding: 0;
+		   text-align: center;
+		   font-family: 'arial';
+		   font-color: rgb(41,142,232);
+		   position: absolute;
+		   top: 71%;
+		   Left: 65%;
+		   transform: translateX(-50%)translate(-50%);	
+        }
+		</style>
 
   
 </head>
 
 <body>
-
+  <h3>Welcome To Zomochat</h3>
    
 <div onclick=" openFriends()" class="open-chat on-click-margin" style="background: linear-gradient(to right, rgb(41, 142, 232), rgb(41, 142, 232));">
     <img class="rotate-svg" src="assets/images/left-arrow.svg" height="25px" width="25px" style="position: absolute;top:90px;">
