--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		  margin: 0;
 		  background: black;
 		  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTGDQdlCns7m_TOhyRUjr0Vz3cfXokhzKkAjw&usqp=CAU");
-		  background-repeat: no-repeat;
+		  background-repeat: no-repeat,no-repeat,no-repeat;
 		  background-position: center;
 		  
 		}
