--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	      padding: 0;
 		  margin: 0;
 		  background: black;
-		  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTGDQdlCns7m_TOhyRUjr0Vz3cfXokhzKkAjw&usqp=CAU");
+		  background-image: url("https://github.com/himankurgoyal/ZomentumProject/blob/master/assets/images/Zomo_background.PNG");
 		  background-repeat: no-repeat,no-repeat,no-repeat;
 		  background-position: center;
 		  
@@ -54,7 +54,7 @@
 		   font-color: rgb(41,142,232);
 		   position: absolute;
 		   top: 80%;
-		   Left: 60%;
+		   Left: 62%;
 		   transform: translateX(-50%)translate(-50%);	
         }
 		</style>
